[gd_scene load_steps=7 format=3 uid="uid://dwts5rm7yb11o"]

[ext_resource type="Script" path="res://Scripts/super_stars.gd" id="1_cps4p"]
[ext_resource type="Texture2D" uid="uid://wpl5k5u7kjng" path="res://Assets/Sprites/Star1.png" id="2_7n0xn"]
[ext_resource type="Texture2D" uid="uid://bofvccum7nnj7" path="res://Assets/Sprites/Star2.png" id="3_wxtmi"]
[ext_resource type="AudioStream" uid="uid://bwsf3s1sxo1r3" path="res://Assets/SFX/blockhititem.wav" id="4_51kbn"]

[sub_resource type="SpriteFrames" id="SpriteFrames_nwdrd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_7n0xn")
}, {
"duration": 1.0,
"texture": ExtResource("3_wxtmi")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qwof7"]
size = Vector2(8, 8)

[node name="SuperStars" type="CharacterBody2D"]
collision_layer = 32
collision_mask = 18
script = ExtResource("1_cps4p")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-0.314487, 0.286949)
sprite_frames = SubResource("SpriteFrames_nwdrd")
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_qwof7")

[node name="Blockhititem" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_51kbn")

[node name="RayCast2DL" type="RayCast2D" parent="."]
target_position = Vector2(-5, 0)
collision_mask = 18

[node name="RayCast2DD" type="RayCast2D" parent="."]
target_position = Vector2(0.0218506, 4.14469)
collision_mask = 18

[node name="RayCast2DR" type="RayCast2D" parent="."]
target_position = Vector2(5, 0)
collision_mask = 18

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_qwof7")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
